fixed spacing on about

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,7 @@ a:hover {
 }
 
 .section {
-  padding-top: 20px;
+  padding-top: 15px;
   padding-bottom: 80px;
 }
 .section-title {
